<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_action_search" android:id="@id/start_scan" android:title="@string/start_scan" />
        <item android:icon="@drawable/ic_restore_mn" android:id="@id/recovred_photo" android:title="@string/recovred_photo" />
        <item android:icon="@drawable/ic_more_apps" android:id="@id/more_apps" android:title="@string/mn_more_apps" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item android:icon="@drawable/ic_action_share" android:id="@id/nav_share" android:title="@string/mn_share" />
            <item android:icon="@drawable/ic_action_important" android:id="@id/nav_rate" android:title="@string/mn_rate" />
        </menu>
    </item>
</menu>