<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:layout_centerInParent="true">
        <TextView android:textSize="25.0dip" android:textStyle="bold" android:gravity="center" android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/app_name" />
        <ImageView android:gravity="center" android:layout_gravity="center" android:id="@id/imageView" android:layout_width="100.0dip" android:layout_height="110.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/ic_launcher" />
        <TextView android:textSize="13.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_marginTop="10.0dip" android:text="@string/privacy_txt" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/tx" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_softsolu" android:layout_alignBottom="@id/linearLayout" android:layout_centerHorizontal="true" />
    </LinearLayout>
    <Button android:textColor="@color/white" android:id="@id/btn_agree" android:background="@drawable/lay_btn_agree" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="15.0dip" android:text="@string/privacy_agree" android:layout_alignParentBottom="true" />
</RelativeLayout>