<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@color/card_pressed" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/alert_exite" android:layout_centerHorizontal="true" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="15.0dip" android:layout_weight="2.0" android:layout_below="@id/textView3" android:layout_centerHorizontal="true">
            <Button android:id="@id/btn_cancel" android:background="@color/card_pressed" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="3.0dip" android:text="@string/alert_no" android:layout_weight="1.0" android:layout_below="@id/textView3" android:layout_alignParentLeft="true" />
            <Button android:id="@id/btn_delete" android:background="@color/card_pressed" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="3.0dip" android:text="@string/alert_yes" android:layout_weight="1.0" android:layout_below="@id/textView3" android:layout_alignParentLeft="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>